--- a/index.css
+++ b/index.css
@@ -322,7 +322,7 @@ canvas.crosshair {
     }
 }
 
-
+/* 
 
 
 
@@ -333,4 +333,4 @@ canvas.crosshair {
         width: 100%;
         height: auto;
     }
-}
+} */
