--- a/index.css
+++ b/index.css
@@ -278,82 +278,4 @@ canvas.crosshair {
 #saveButton {
     display: none;
 }
-
-/* Media Queries */
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-    }
-
-    .buttons {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .file, .view {
-        width: 100%;
-        justify-content: center;
-    }
-
-    button {
-        font-size: 12px;
-        padding: 5px;
-    }
-
-    .sections {
-        flex-direction: column;
-        font-size: 12px;
-    }
-
-    .section {
-        width: 100%;
-        padding: 10px;
-    }
-
-    .shape, .color_button {
-        width: 20px;
-        height: 20px;
-    }
-
-    .color-swatch {
-        width: 20px;
-        height: 20px;
-    }
-}
-
-@media (max-width: 480px) {
-    .buttons {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .file, .view {
-        width: 100%;
-        justify-content: center;
-    }
-
-    button {
-        font-size: 10px;
-        padding: 5px;
-    }
-
-    .sections {
-        flex-direction: column;
-        font-size: 10px;
-    }
-
-    .section {
-        width: 100%;
-        padding: 5px;
-    }
-
-    .shape, .color_button {
-        width: 20px;
-        height: 20px;
-    }
-
-    .color-swatch {
-        width: 20px;
-        height: 20px;
-    }
-}
+/* updated css */
